# geom_helpers

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/geom_helpers/: __init__.py  bearing_helper.py  distance_helper.py  earth_curvature_drop.py  latlon_code.py  latlon_code_numpy.py  latlon_rc.py  latlon_subcells.py  osm_reader_helper.py  utm_helper.py
src/geom_helpers/elevation/: ElevationDataSource.py  elevation_helper.py  pt_elevation.py
src/geom_helpers/tiles/: README.md  terrain_heatmap.py  terrain_tiles.py  terrain_tiles_copernicus.py  terrain_tiles_mapzen.py  vector_tiles.py  xyz_tiles.py
src/geom_helpers/tileserver/: tileserver.py  tileserver2.py
tests/: conftest.py
tests/data/: mountains.csv
tests/data/copernicus/90/: Copernicus_DSM_COG_30_N39_00_E000_00_DEM.tif  Copernicus_DSM_COG_30_N39_00_E001_00_DEM.tif  Copernicus_DSM_COG_30_N53_00_E000_00_DEM.tif  Copernicus_DSM_COG_30_N59_00_W002_00_DEM.tif  Copernicus_DSM_COG_30_N60_00_W001_00_DEM.tif
tests/unit/: test_bearing_helper.py  test_distance_helper.py  test_distance_helper_unittest.py  test_earth_curvature_drop.py  test_elevation_data_source.py  test_elevation_helper.py  test_latlon_code_unittest.py  test_latlon_rc.py  test_latlon_rc_unittest.py  test_latlon_subcells.py  test_osm_reader_helper.py  test_pt_elevation.py  test_terrain_heatmap.py  test_terrain_tiles_copernicus.py  test_terrain_tiles_mapzen.py  test_utm_helper.py  test_xyz_tiles.py
