[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geom_helpers"
version = "0.1.0"
description = "Basic utility functions for cell code and reg code data and derived constructs; distance and bearing helper functions"
readme = "README.md"
requires-python = ">=3.10"
# "shapely>=2.0.0", "numpy>=1.26.4", "pandas>=2.2.2", "geopandas>=1.0.1", "sqlite3>3.46.0"
# "basic_helpers @ git+https://github.com/you/basic_helpers.git@v0.1.0"
dependencies = ["shapely>=2.0.0", "numpy>=1.26.4", "pandas>=2.2.2", "numba>=0.51.2", 
                "basic_helpers"]  # only Numpy, Pandas and custom packages; not Python standard libraries like gzip, zipfile, ...

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]  # use locally with venv pip install -e .[dev]  OR   pip install -e .[dev,typecheck]
typecheck = ["mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 140

[tool.mypy]
ignore_missing_imports = true  # i.e. not strict
warn_return_any = true
warn_unused_configs = true
# strict = true
# additionally Pyright (Pylance) type checking can be enabled in .vscode/settings "python.analysis.typeCheckingMode": "basic"  
# Pyright setting options: "off | basic | strict"
