[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geom_helpers"
dynamic = ["version"]
# version = "0.1.0"   replaced by dynamic
description = "Basic utility functions for cell code and reg code data and derived constructs; distance and bearing helper functions; contains sub-packages 'tiles' and 'tileserver' to create and display elevation maps"
readme = "README.md"
requires-python = ">=3.10"
# "shapely>=2.0.0", "numpy>=1.26.4", "pandas>=2.2.2", "geopandas>=1.0.1", "sqlite3>3.46.0", "geojson2vt>=1.0.1", 
dependencies = ["shapely>=2.0.0", "numpy>=1.26.4", "pandas>=2.2.2", "numba>=0.51.2", "requests>2.32.0", 
                "matplotlib>=3.5.0", "seaborn>=0.11.0", "imageio>=2.10.0", "Pillow>=9.0.0", "vt2pbf>=0.1.5", 
                "imageio>=2.35.1", "scipy>=1.14.1", "seaborn>=0.13.2", "rasterio>=1.3.10",
                "basic_helpers @ git+https://github.com/hgmuc/basic_helpers.git@v0.2.1"]  # only Numpy, Pandas and custom packages; not Python standard libraries like gzip, zipfile, ...

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]  # use locally with venv pip install -e .[dev]  OR   pip install -e .[dev,typecheck]
typecheck = ["mypy"]

[project.scripts]
geom-tileserver = "geom_helpers.tileserver.tileserver2:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 140

[tool.mypy]
ignore_missing_imports = true  # i.e. not strict
warn_return_any = true
warn_unused_configs = true
# strict = true
# additionally Pyright (Pylance) type checking can be enabled in .vscode/settings "python.analysis.typeCheckingMode": "basic"  
# Pyright setting options: "off | basic | strict"

[tool.setuptools_scm]
# This enables the automatic versioning from Git tags
